--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Connection open\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import getpass\n",
+    "import mysql.connector\n",
+    "cnx = mysql.connector.connect(user = 'root',password = getpass.getpass(), host ='localhost', database = 'sakila', auth_plugin='mysql_native_password')\n",
+    "cnx.is_connected()\n",
+    "if cnx.is_connected():\n",
+    "    print(\"Connection open\")\n",
+    "    # do stuff you need to the database\n",
+    "else:\n",
+    "    print(\"Connection is not successfully open\")"
    ]
   },
   {
@@ -35,11 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -51,11 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa_data = pd.read_json('nasa.json')\n",
+    "nasa = pd.DataFrame(nasa_data)"
    ]
   },
   {
@@ -67,11 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   :@computed_region_cbhk_fwbd  :@computed_region_nnqa_25f4  fall  \\\n",
+       "0                          NaN                          NaN  Fell   \n",
+       "1                          NaN                          NaN  Fell   \n",
+       "2                          NaN                          NaN  Fell   \n",
+       "3                          NaN                          NaN  Fell   \n",
+       "4                          NaN                          NaN  Fell   \n",
+       "\n",
+       "                                         geolocation   id      mass      name  \\\n",
+       "0  {'type': 'Point', 'coordinates': [6.08333, 50....    1      21.0    Aachen   \n",
+       "1  {'type': 'Point', 'coordinates': [10.23333, 56...    2     720.0    Aarhus   \n",
+       "2  {'type': 'Point', 'coordinates': [-113, 54.216...    6  107000.0      Abee   \n",
+       "3  {'type': 'Point', 'coordinates': [-99.9, 16.88...   10    1914.0  Acapulco   \n",
+       "4  {'type': 'Point', 'coordinates': [-64.95, -33....  370     780.0   Achiras   \n",
+       "\n",
+       "  nametype     recclass    reclat    reclong                     year  \n",
+       "0    Valid           L5  50.77500    6.08333  1880-01-01T00:00:00.000  \n",
+       "1    Valid           H6  56.18333   10.23333  1951-01-01T00:00:00.000  \n",
+       "2    Valid          EH4  54.21667 -113.00000  1952-01-01T00:00:00.000  \n",
+       "3    Valid  Acapulcoite  16.88333  -99.90000  1976-01-01T00:00:00.000  \n",
+       "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>:@computed_region_cbhk_fwbd</th>\n      <th>:@computed_region_nnqa_25f4</th>\n      <th>fall</th>\n      <th>geolocation</th>\n      <th>id</th>\n      <th>mass</th>\n      <th>name</th>\n      <th>nametype</th>\n      <th>recclass</th>\n      <th>reclat</th>\n      <th>reclong</th>\n      <th>year</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Fell</td>\n      <td>{'type': 'Point', 'coordinates': [6.08333, 50....</td>\n      <td>1</td>\n      <td>21.0</td>\n      <td>Aachen</td>\n      <td>Valid</td>\n      <td>L5</td>\n      <td>50.77500</td>\n      <td>6.08333</td>\n      <td>1880-01-01T00:00:00.000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Fell</td>\n      <td>{'type': 'Point', 'coordinates': [10.23333, 56...</td>\n      <td>2</td>\n      <td>720.0</td>\n      <td>Aarhus</td>\n      <td>Valid</td>\n      <td>H6</td>\n      <td>56.18333</td>\n      <td>10.23333</td>\n      <td>1951-01-01T00:00:00.000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Fell</td>\n      <td>{'type': 'Point', 'coordinates': [-113, 54.216...</td>\n      <td>6</td>\n      <td>107000.0</td>\n      <td>Abee</td>\n      <td>Valid</td>\n      <td>EH4</td>\n      <td>54.21667</td>\n      <td>-113.00000</td>\n      <td>1952-01-01T00:00:00.000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Fell</td>\n      <td>{'type': 'Point', 'coordinates': [-99.9, 16.88...</td>\n      <td>10</td>\n      <td>1914.0</td>\n      <td>Acapulco</td>\n      <td>Valid</td>\n      <td>Acapulcoite</td>\n      <td>16.88333</td>\n      <td>-99.90000</td>\n      <td>1976-01-01T00:00:00.000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Fell</td>\n      <td>{'type': 'Point', 'coordinates': [-64.95, -33....</td>\n      <td>370</td>\n      <td>780.0</td>\n      <td>Achiras</td>\n      <td>Valid</td>\n      <td>L6</td>\n      <td>-33.16667</td>\n      <td>-64.95000</td>\n      <td>1902-01-01T00:00:00.000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa.head()"
    ]
   },
   {
@@ -85,11 +137,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "12286    1\n",
+       "10846    1\n",
+       "11824    1\n",
+       "10870    1\n",
+       "16707    1\n",
+       "        ..\n",
+       "52412    1\n",
+       "5418     1\n",
+       "22368    1\n",
+       "4944     1\n",
+       "52843    1\n",
+       "Name: id, Length: 1000, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa['id'].value_counts()"
    ]
   },
   {
@@ -101,11 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa.to_json('nasa2.json', orient='records')\n",
+    "#nasa_test = pd.read_json('nasa2.json')\n",
+    "#nasa_test"
    ]
   },
   {
@@ -123,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,12 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle = pd.read_csv(tst_url,encoding='utf-8',sep=' ', names = cols)"
    ]
   },
   {
@@ -162,12 +240,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "    time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+       "55     0        81          0        -6    11      25         88        64   \n",
+       "56     0        96          0        52    -4      40         44         4   \n",
+       "50    -1        89         -7        50     0      39         40         2   \n",
+       "53     9        79          0        42    -2      25         37        12   \n",
+       "55     2        82          0        54    -6      26         28         2   \n",
+       "\n",
+       "    class  \n",
+       "55      4  \n",
+       "56      4  \n",
+       "50      1  \n",
+       "53      4  \n",
+       "55      1  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>rad_flow</th>\n      <th>fpv_close</th>\n      <th>fpv_open</th>\n      <th>high</th>\n      <th>bypass</th>\n      <th>bpv_close</th>\n      <th>bpv_open</th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>55</th>\n      <td>0</td>\n      <td>81</td>\n      <td>0</td>\n      <td>-6</td>\n      <td>11</td>\n      <td>25</td>\n      <td>88</td>\n      <td>64</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>56</th>\n      <td>0</td>\n      <td>96</td>\n      <td>0</td>\n      <td>52</td>\n      <td>-4</td>\n      <td>40</td>\n      <td>44</td>\n      <td>4</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>50</th>\n      <td>-1</td>\n      <td>89</td>\n      <td>-7</td>\n      <td>50</td>\n      <td>0</td>\n      <td>39</td>\n      <td>40</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>53</th>\n      <td>9</td>\n      <td>79</td>\n      <td>0</td>\n      <td>42</td>\n      <td>-2</td>\n      <td>25</td>\n      <td>37</td>\n      <td>12</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>55</th>\n      <td>2</td>\n      <td>82</td>\n      <td>0</td>\n      <td>54</td>\n      <td>-6</td>\n      <td>26</td>\n      <td>28</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle.head()"
    ]
   },
   {
@@ -179,12 +281,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "# Export tab-delimited file\n",
+    "shuttle = shuttle.to_csv('shuttle.csv', sep=',', index=False)"
    ]
   },
   {
@@ -200,12 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astrounat = pd.read_excel('astronauts.xls')"
    ]
   },
   {
@@ -217,12 +320,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['Name', 'Year', 'Group', 'Status', 'Birth Date', 'Birth Place',\n",
+       "       'Gender', 'Alma Mater', 'Undergraduate Major', 'Graduate Major',\n",
+       "       'Military Rank', 'Military Branch', 'Space Flights',\n",
+       "       'Space Flight (hr)', 'Space Walks', 'Space Walks (hr)', 'Missions',\n",
+       "       'Death Date', 'Death Mission'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astrounat.head()\n",
+    "astrounat.columns"
    ]
   },
   {
@@ -234,12 +354,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Physics                                          35\n",
+       "Aerospace Engineering                            33\n",
+       "Mechanical Engineering                           30\n",
+       "Aeronautical Engineering                         28\n",
+       "Electrical Engineering                           23\n",
+       "                                                 ..\n",
+       "Physical Science                                  1\n",
+       "Molecular Biology                                 1\n",
+       "Astronomy                                         1\n",
+       "Business Management; Aeronautical Engineering     1\n",
+       "Chemistry; Physiological Optics                   1\n",
+       "Name: Undergraduate Major, Length: 83, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astrounat['Undergraduate Major'].value_counts()"
    ]
   },
   {
@@ -251,12 +393,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "astrounat = astrounat.to_csv('astrounat_data.csv',encoding='utf-8', sep='\\t', index=False)"
    ]
   },
   {
@@ -295,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
