Correct Lab import-export Andrea Nichil

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -760,13 +760,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "astronaut"
+    "astronaut.to_csv('astronaut.csv', index=False)"
    ]
   },
   {
