--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,20 +302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "there are 10 but olny 9 names.\n"
+      "there are 9 but olny 9 names.\n"
      ]
     }
    ],
    "source": [
     "#Read the file\n",
-    "shuttle = pd.read_csv(tst_url, sep = ' ')\n",
+    "shuttle = pd.read_csv(tst_url, names=cols, sep=' ')\n",
     "#rename columns 9 name // 10 columns!\n",
     "print('there are', len(shuttle.columns), 'but olny', len(cols), 'names.')"
    ]
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -353,44 +353,99 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>55 0 81 0 -6 11 25 88 64 4</th>\n",
+       "      <th>time</th>\n",
+       "      <th>rad_flow</th>\n",
+       "      <th>fpv_close</th>\n",
+       "      <th>fpv_open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>bypass</th>\n",
+       "      <th>bpv_close</th>\n",
+       "      <th>bpv_open</th>\n",
+       "      <th>class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>56 0 96 0 52 -4 40 44 4 4</td>\n",
+       "      <th>55</th>\n",
+       "      <td>0</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>25</td>\n",
+       "      <td>88</td>\n",
+       "      <td>64</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50 -1 89 -7 50 0 39 40 2 1</td>\n",
+       "      <th>56</th>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>40</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>53 9 79 0 42 -2 25 37 12 4</td>\n",
+       "      <th>50</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>55 2 82 0 54 -6 26 28 2 1</td>\n",
+       "      <th>53</th>\n",
+       "      <td>9</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>37</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>41 0 84 3 38 -4 43 45 2 1</td>\n",
+       "      <th>55</th>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   55 0 81 0 -6 11 25 88 64 4\n",
-       "0   56 0 96 0 52 -4 40 44 4 4\n",
-       "1  50 -1 89 -7 50 0 39 40 2 1\n",
-       "2  53 9 79 0 42 -2 25 37 12 4\n",
-       "3   55 2 82 0 54 -6 26 28 2 1\n",
-       "4   41 0 84 3 38 -4 43 45 2 1"
+       "    time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+       "55     0        81          0        -6    11      25         88        64   \n",
+       "56     0        96          0        52    -4      40         44         4   \n",
+       "50    -1        89         -7        50     0      39         40         2   \n",
+       "53     9        79          0        42    -2      25         37        12   \n",
+       "55     2        82          0        54    -6      26         28         2   \n",
+       "\n",
+       "    class  \n",
+       "55      4  \n",
+       "56      4  \n",
+       "50      1  \n",
+       "53      4  \n",
+       "55      1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,12 +465,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle.to_csv('shuttle.csv')"
    ]
   },
   {
