--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -39,7 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "import numpy as np "
    ]
   },
   {
@@ -55,7 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa = pd.read_json(\"C:\\\\Users\\\\nunon\\\\Documents\\\\\\\\Ironhack\\\\Projects\\\\lab-import-export\\\\your-code\\\\nasa.json\")\n"
    ]
   },
   {
@@ -71,7 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa.head()\n"
    ]
   },
   {
@@ -89,7 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa[\"fall\"].value_counts()\n"
    ]
   },
   {
@@ -105,7 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa.to_json(\"C:\\\\Users\\\\nunon\\\\Documents\\\\\\\\Ironhack\\\\Projects\\\\lab-import-export\\\\your-code\\\\nasa-output.json\", orient='records')\n"
    ]
   },
   {
@@ -128,7 +134,8 @@
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -150,7 +157,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle = pd.read_csv(tst_url, sep = \" \", names = cols)\n"
    ]
   },
   {
@@ -167,7 +175,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle.head()\n"
    ]
   },
   {
@@ -184,7 +193,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle.to_csv(\"C:\\\\Users\\\\nunon\\\\Documents\\\\\\\\Ironhack\\\\Projects\\\\lab-import-export\\\\your-code\\\\shuttle.csv\", sep=',', index=False)\n"
    ]
   },
   {
@@ -205,7 +215,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronauts = pd.read_excel(\"C:\\\\Users\\\\nunon\\\\Documents\\\\\\\\Ironhack\\\\Projects\\\\lab-import-export\\\\your-code\\\\astronauts.xls\")\n"
    ]
   },
   {
@@ -222,7 +233,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronauts.head()\n"
    ]
   },
   {
@@ -239,6 +251,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "astronauts[\"Undergraduate Major\"].value_counts()\n",
+    "astronauts[\"Undergraduate Major\"].value_counts().idxmax()\n",
     "\n"
    ]
   },
@@ -256,7 +270,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronauts.to_csv(\"C:\\\\Users\\\\nunon\\\\Documents\\\\\\\\Ironhack\\\\Projects\\\\lab-import-export\\\\your-code\\\\astronaut.csv\", sep =\"\\t\", index=False)\n"
    ]
   },
   {
@@ -275,7 +290,13 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "column_names = ['Season', 'Age', 'Childish diseases', 'Accident or serious trauma', 'Surgical intervention', \n",
+    "        'High fevers in the last year', 'Frequency of alcohol consumption ', 'Smoking habit', \"Number of hours spent\", \"Output\"]\n",
+    "txt = \"C:\\\\Users\\\\nunon\\\\Documents\\\\\\\\Ironhack\\\\Projects\\\\lab-import-export\\\\your-code\\\\fertility_Diagnosis.txt\"\n",
+    "\n",
+    "fertility = pd.read_csv(txt, names = column_names, sep = \",\", index_col=None)\n",
+    "fertility.head()"
    ]
   }
  ],
